--- a/style.css
+++ b/style.css
@@ -15,7 +15,19 @@ body {
 
 .nav__navbar {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+
+.nav ul {
+  padding: 0;
+}
+
+.nav li {
+  display: inline;
+}
+
+.nav a {
+  text-decoration: none;
+  color: #fff;
 }
