--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .nav__navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -29,6 +29,6 @@ body {
 
 .nav a {
   text-decoration: none;
-  color: red;
+  color: #fff;
   padding: 10px;
 }
