--- a/style.css
+++ b/style.css
@@ -21,8 +21,18 @@ body {
   border-bottom: 5px solid #e8491d;
 }
 
-.nav__navbar {
-  justify-content: space-around;
+.nav__container .nav__navbar {
+  max-width: 800px;
+  position: relative;
+  padding: 0 30px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.nav__title-top {
 }
 
 .nav ul {
@@ -30,13 +40,13 @@ body {
 }
 
 .nav li {
-  display: inline;
-  margin-top: 2rem;
+  /* display: inline;
+  margin-top: 2rem; */
 }
 
 .nav a {
   text-decoration: none;
-  color: #fff;
+  /* color: #fff;
   padding: 10px;
-  margin-top: 2rem;
+  margin-top: 2rem; */
 }
