--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 body {
   color: #fff;
+  /* font-family: 'Poppins', sans-serif; */
+  font-family: 'Lato', sans-serif;
 }
 
 .nav__container {
@@ -22,7 +24,7 @@ body {
 }
 
 .nav__container .nav__navbar {
-  max-width: 800px;
+  width: 100%;
   position: relative;
   padding: 0 30px;
   height: 100px;
@@ -30,23 +32,30 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: space-around;
 }
 
-.nav__title-top {
+.nav__logo-top {
+  max-height: 35px;
+  font-size: 24px;
 }
-
-.nav ul {
+/* Ul mneu */
+.nav__menu {
+  margin: 0 0 0 50px;
   padding: 0;
 }
 
-.nav li {
-  /* display: inline;
-  margin-top: 2rem; */
+.nav__menu li {
+  padding-right: 25px;
+  display: inline;
 }
 
-.nav a {
+.nav__menu a {
   text-decoration: none;
-  /* color: #fff;
-  padding: 10px;
-  margin-top: 2rem; */
+  font-size: 22px;
+  color: #fff;
+  /* padding: 10px; */
+}
+.nav__acme {
+  color: #e8491d;
 }
